Fix input spacing

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: 'Black Ops One', cursive;
-  background-color: #fad49c;
+  background-color: #f58721;
   text-align: center;
 }
 
